# memro-mcp

./: .env  Dockerfile  Makefile  README.md  adversarial_memory_test.py  bridge.js  bridge.py  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  example_agent.py  mcp_logger.py  mcp_optimization.md  pyproject.toml  setup_managed.md  test_compatibility.py  test_graph_reasoning.py  test_mee_complete.py  test_minimal.py  test_saas_multi_tenant.py
src/memro_mcp/: knowledge_graph.py  sdk.py  server.py  supermemory_tools.py  webhook_handler.py
src/memro_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
